# Cpp-practice

Realsense/RealSenseTest/: CMakeLists.txt  main.cpp
Thread/thread_test/: CMakeLists.txt  std_thread_demo.cpp
